docs/v0.5/_sources/api/gwpy.frequencyseries.SpectralVariance.rst.txt


SpectralVariance
=====================================

.. currentmodule:: gwpy.frequencyseries

.. autoclass:: SpectralVariance
   :no-inherited-members:

   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~SpectralVariance.T
      ~SpectralVariance.base
      ~SpectralVariance.bins
      ~SpectralVariance.cgs
      ~SpectralVariance.channel
      ~SpectralVariance.ctypes
      ~SpectralVariance.data
      ~SpectralVariance.density
      ~SpectralVariance.df
      ~SpectralVariance.dtype
      ~SpectralVariance.dx
      ~SpectralVariance.dy
      ~SpectralVariance.epoch
      ~SpectralVariance.equivalencies
      ~SpectralVariance.f0
      ~SpectralVariance.flags
      ~SpectralVariance.flat
      ~SpectralVariance.frequencies
      ~SpectralVariance.imag
      ~SpectralVariance.info
      ~SpectralVariance.isscalar
      ~SpectralVariance.itemsize
      ~SpectralVariance.name
      ~SpectralVariance.nbytes
      ~SpectralVariance.ndim
      ~SpectralVariance.normed
      ~SpectralVariance.real
      ~SpectralVariance.shape
      ~SpectralVariance.si
      ~SpectralVariance.size
      ~SpectralVariance.strides
      ~SpectralVariance.unit
      ~SpectralVariance.value
      ~SpectralVariance.x0
      ~SpectralVariance.xindex
      ~SpectralVariance.xspan
      ~SpectralVariance.xunit
      ~SpectralVariance.y0
      ~SpectralVariance.yindex
      ~SpectralVariance.yspan
      ~SpectralVariance.yunit

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SpectralVariance.abs
      ~SpectralVariance.all
      ~SpectralVariance.any
      ~SpectralVariance.append
      ~SpectralVariance.argmax
      ~SpectralVariance.argmin
      ~SpectralVariance.argpartition
      ~SpectralVariance.argsort
      ~SpectralVariance.astype
      ~SpectralVariance.byteswap
      ~SpectralVariance.choose
      ~SpectralVariance.clip
      ~SpectralVariance.compress
      ~SpectralVariance.conj
      ~SpectralVariance.conjugate
      ~SpectralVariance.copy
      ~SpectralVariance.crop
      ~SpectralVariance.cumprod
      ~SpectralVariance.cumsum
      ~SpectralVariance.decompose
      ~SpectralVariance.diagonal
      ~SpectralVariance.diff
      ~SpectralVariance.dot
      ~SpectralVariance.dump
      ~SpectralVariance.dumps
      ~SpectralVariance.ediff1d
      ~SpectralVariance.fill
      ~SpectralVariance.flatten
      ~SpectralVariance.from_spectrogram
      ~SpectralVariance.getfield
      ~SpectralVariance.insert
      ~SpectralVariance.is_compatible
      ~SpectralVariance.is_contiguous
      ~SpectralVariance.item
      ~SpectralVariance.itemset
      ~SpectralVariance.max
      ~SpectralVariance.mean
      ~SpectralVariance.median
      ~SpectralVariance.min
      ~SpectralVariance.nansum
      ~SpectralVariance.newbyteorder
      ~SpectralVariance.nonzero
      ~SpectralVariance.override_unit
      ~SpectralVariance.pad
      ~SpectralVariance.partition
      ~SpectralVariance.percentile
      ~SpectralVariance.plot
      ~SpectralVariance.prepend
      ~SpectralVariance.prod
      ~SpectralVariance.ptp
      ~SpectralVariance.put
      ~SpectralVariance.ravel
      ~SpectralVariance.read
      ~SpectralVariance.repeat
      ~SpectralVariance.reshape
      ~SpectralVariance.resize
      ~SpectralVariance.round
      ~SpectralVariance.searchsorted
      ~SpectralVariance.setfield
      ~SpectralVariance.setflags
      ~SpectralVariance.sort
      ~SpectralVariance.squeeze
      ~SpectralVariance.std
      ~SpectralVariance.sum
      ~SpectralVariance.swapaxes
      ~SpectralVariance.take
      ~SpectralVariance.to
      ~SpectralVariance.tobytes
      ~SpectralVariance.tofile
      ~SpectralVariance.tolist
      ~SpectralVariance.tostring
      ~SpectralVariance.trace
      ~SpectralVariance.transpose
      ~SpectralVariance.update
      ~SpectralVariance.value_at
      ~SpectralVariance.var
      ~SpectralVariance.view
      ~SpectralVariance.write
      ~SpectralVariance.zip

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: T
   .. autoattribute:: base
   .. autoattribute:: bins
   .. autoattribute:: cgs
   .. autoattribute:: channel
   .. autoattribute:: ctypes
   .. autoattribute:: data
   .. autoattribute:: density
   .. autoattribute:: df
   .. autoattribute:: dtype
   .. autoattribute:: dx
   .. autoattribute:: dy
   .. autoattribute:: epoch
   .. autoattribute:: equivalencies
   .. autoattribute:: f0
   .. autoattribute:: flags
   .. autoattribute:: flat
   .. autoattribute:: frequencies
   .. autoattribute:: imag
   .. autoattribute:: info
   .. autoattribute:: isscalar
   .. autoattribute:: itemsize
   .. autoattribute:: name
   .. autoattribute:: nbytes
   .. autoattribute:: ndim
   .. autoattribute:: normed
   .. autoattribute:: real
   .. autoattribute:: shape
   .. autoattribute:: si
   .. autoattribute:: size
   .. autoattribute:: strides
   .. autoattribute:: unit
   .. autoattribute:: value
   .. autoattribute:: x0
   .. autoattribute:: xindex
   .. autoattribute:: xspan
   .. autoattribute:: xunit
   .. autoattribute:: y0
   .. autoattribute:: yindex
   .. autoattribute:: yspan
   .. autoattribute:: yunit

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: abs
   .. automethod:: all
   .. automethod:: any
   .. automethod:: append
   .. automethod:: argmax
   .. automethod:: argmin
   .. automethod:: argpartition
   .. automethod:: argsort
   .. automethod:: astype
   .. automethod:: byteswap
   .. automethod:: choose
   .. automethod:: clip
   .. automethod:: compress
   .. automethod:: conj
   .. automethod:: conjugate
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: cumprod
   .. automethod:: cumsum
   .. automethod:: decompose
   .. automethod:: diagonal
   .. automethod:: diff
   .. automethod:: dot
   .. automethod:: dump
   .. automethod:: dumps
   .. automethod:: ediff1d
   .. automethod:: fill
   .. automethod:: flatten
   .. automethod:: from_spectrogram
   .. automethod:: getfield
   .. automethod:: insert
   .. automethod:: is_compatible
   .. automethod:: is_contiguous
   .. automethod:: item
   .. automethod:: itemset
   .. automethod:: max
   .. automethod:: mean
   .. automethod:: median
   .. automethod:: min
   .. automethod:: nansum
   .. automethod:: newbyteorder
   .. automethod:: nonzero
   .. automethod:: override_unit
   .. automethod:: pad
   .. automethod:: partition
   .. automethod:: percentile
   .. automethod:: plot
   .. automethod:: prepend
   .. automethod:: prod
   .. automethod:: ptp
   .. automethod:: put
   .. automethod:: ravel
   .. automethod:: read
   .. automethod:: repeat
   .. automethod:: reshape
   .. automethod:: resize
   .. automethod:: round
   .. automethod:: searchsorted
   .. automethod:: setfield
   .. automethod:: setflags
   .. automethod:: sort
   .. automethod:: squeeze
   .. automethod:: std
   .. automethod:: sum
   .. automethod:: swapaxes
   .. automethod:: take
   .. automethod:: to
   .. automethod:: tobytes
   .. automethod:: tofile
   .. automethod:: tolist
   .. automethod:: tostring
   .. automethod:: trace
   .. automethod:: transpose
   .. automethod:: update
   .. automethod:: value_at
   .. automethod:: var
   .. automethod:: view
   .. automethod:: write
   .. automethod:: zip

   
   